Updating code and markdown text

--- a/notebooks/100M_Career_Analysis.ipynb
+++ b/notebooks/100M_Career_Analysis.ipynb
@@ -1981,7 +1981,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's find the average time of each athlete by race type"
+    "**Let's find the average time of each athlete by race type**"
    ]
   },
   {
@@ -2030,7 +2030,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's find the average time of each athlete where the race is a final"
+    "**Let's find the average time of each athlete where the race is a final**"
    ]
   },
   {
@@ -2062,7 +2062,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's see the average time wind and place for each type of race"
+    "**Let's see the average time wind and place for each type of race**"
    ]
   },
   {
@@ -2090,7 +2090,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's see the average time wind and place for each category of race"
+    "**Let's see the average time wind and place for each category of race**"
    ]
   },
   {
@@ -2118,7 +2118,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's see the average time wind and place for each category and type of race"
+    "**Let's see the average time wind and place for each category and type of race**"
    ]
   },
   {
@@ -2146,7 +2146,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's see the average time for each athlete by month"
+    "**Let's see the average time for each athlete by month**"
    ]
   },
   {
@@ -2172,7 +2172,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's find the average time per athlete by location (country)"
+    "**Let's find the average time per athlete by location (country)**"
    ]
   },
   {
@@ -2200,7 +2200,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's find the average 100m time for each athlete when they won the race."
+    "**Let's find the average 100m time for each athlete when they won the race.**"
    ]
   },
   {
@@ -2232,7 +2232,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's get the year by year avg 100m difference for each athlete"
+    "**Let's get the year by year avg 100m difference for each athlete**"
    ]
   },
   {
@@ -2258,6 +2258,34 @@
    "source": [
     "avg_time_per_year_100m = pd.DataFrame(avg_time_per_year_100m)\n",
     "avg_time_per_year_100m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Let's find the average 100m time per year**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Average_100m_YR_OVR = All_100m_Races.groupby(['Year'])['Time'].mean().reset_index()\n",
+    "\n",
+    "Average_100m_YR_OVR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Average_100m_YR_OVR = pd.DataFrame(Average_100m_YR_OVR)\n",
+    "Average_100m_YR_OVR.head(3)"
    ]
   },
   {
