--- a/notebooks/200M_Career_Analysis.ipynb
+++ b/notebooks/200M_Career_Analysis.ipynb
@@ -2115,7 +2115,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's find the average time of each athlete by race type"
+    "**Let's find the average time of each athlete by race type**"
    ]
   },
   {
@@ -2164,7 +2164,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's find the average time of each athlete where the race is a final"
+    "**Let's find the average time of each athlete where the race is a final**"
    ]
   },
   {
@@ -2196,7 +2196,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's see the average time wind and place for each type of race"
+    "**Let's see the average time wind and place for each type of race**"
    ]
   },
   {
@@ -2224,7 +2224,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's see the average time wind and place for each category of race"
+    "**Let's see the average time wind and place for each category of race**"
    ]
   },
   {
@@ -2252,7 +2252,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's see the average time wind and place for each category and type of race"
+    "**Let's see the average time wind and place for each category and type of race**"
    ]
   },
   {
@@ -2280,7 +2280,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's see the average time for each athlete by month"
+    "**Let's see the average time for each athlete by month**"
    ]
   },
   {
@@ -2306,7 +2306,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's find the average time per athlete by location (country)"
+    "**Let's find the average time per athlete by location (country)**"
    ]
   },
   {
@@ -2334,7 +2334,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's find the average 200m time for each athlete when they won the race."
+    "**Let's find the average 200m time for each athlete when they won the race.**"
    ]
   },
   {
@@ -2366,7 +2366,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's get the year by year avg 100m difference for each athlete"
+    "**Let's get the year by year avg 200m difference for each athlete**"
    ]
   },
   {
@@ -2392,6 +2392,34 @@
    "source": [
     "avg_time_per_year_200m = pd.DataFrame(avg_time_per_year_200m)\n",
     "avg_time_per_year_200m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Let's find the average 200m time per year**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Average_200m_YR_OVR = All_200m_Races.groupby(['Year'])['Time'].mean().reset_index()\n",
+    "\n",
+    "Average_200m_YR_OVR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Average_200m_YR_OVR = pd.DataFrame(Average_200m_YR_OVR)\n",
+    "Average_200m_YR_OVR.head(3)"
    ]
   },
   {
