--- a/notebooks/400M_Career_Analysis.ipynb
+++ b/notebooks/400M_Career_Analysis.ipynb
@@ -1995,7 +1995,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's find the average time of each athlete by race type"
+    "**Let's find the average time of each athlete by race type**"
    ]
   },
   {
@@ -2044,7 +2044,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's find the average time of each athlete where the race is a final"
+    "**Let's find the average time of each athlete where the race is a final**"
    ]
   },
   {
@@ -2076,7 +2076,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's see the average time wind and place for each type of race"
+    "**Let's see the average time wind and place for each type of race**"
    ]
   },
   {
@@ -2104,7 +2104,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's see the average time wind and place for each category of race"
+    "**Let's see the average time wind and place for each category of race**"
    ]
   },
   {
@@ -2132,7 +2132,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's see the average time wind and place for each category and type of race"
+    "**Let's see the average time wind and place for each category and type of race**"
    ]
   },
   {
@@ -2160,7 +2160,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's see the average time for each athlete by month"
+    "**Let's see the average time for each athlete by month**"
    ]
   },
   {
@@ -2186,7 +2186,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's find the average time per athlete by location (country)"
+    "**Let's find the average time per athlete by location (country)**"
    ]
   },
   {
@@ -2214,7 +2214,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's find the average 400m time for each athlete when they won the race."
+    "**Let's find the average 400m time for each athlete when they won the race.**"
    ]
   },
   {
@@ -2246,7 +2246,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's get the year by year avg 400m difference for each athlete"
+    "**Let's get the year by year avg 400m difference for each athlete**"
    ]
   },
   {
@@ -2272,6 +2272,34 @@
    "source": [
     "avg_time_per_year_400m = pd.DataFrame(avg_time_per_year_400m)\n",
     "avg_time_per_year_400m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Let's find the average 400m time per year**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Average_400m_YR_OVR = All_400m_Races.groupby(['Year'])['Time'].mean().reset_index()\n",
+    "\n",
+    "Average_400m_YR_OVR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Average_400m_YR_OVR = pd.DataFrame(Average_400m_YR_OVR)\n",
+    "Average_400m_YR_OVR.head(3)"
    ]
   },
   {
