Added code regarding the total number of races and averages with geographical data per event. I also updated the code regarding the average times per month as well as analyzing data by quarters of the year.

--- a/notebooks/200M_Career_Analysis.ipynb
+++ b/notebooks/200M_Career_Analysis.ipynb
@@ -2115,6 +2115,88 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Which continent did most of the top athletes race?**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "race_location_continent = pd.DataFrame(All_200m_Races['Location_Continent'].value_counts().reset_index())\n",
+    "race_location_continent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "race_location_continent.columns = ['Continent','Races']\n",
+    "race_location_continent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "race_location_continent.Continent.nlargest(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "race_location_continent.Continent.nlargest(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "race_location_continent = pd.DataFrame(race_location_continent)\n",
+    "race_location_continent.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Let's break down the number of total races by continent and country to see where the athlete tended to compete**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Total_Races_Geo_200m = All_200m_Races.groupby(['Location_Continent', 'Loccation_Country_FN']).size().reset_index(name='Races')#You can switch 'Loccation_Country_FN' for 'Loccation_Country' if needed.\n",
+    "Total_Races_Geo_200m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Total_Races_Geo_200m = pd.DataFrame(Total_Races_Geo_200m)\n",
+    "Total_Races_Geo_200m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Let's find the average time of each athlete by race type**"
    ]
   },
@@ -2289,7 +2371,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "average_time_by_month = All_200m_Races.groupby(['Athlete', 'Month'])['Time'].mean().reset_index()"
+    "All_200m_Races['Month'] = All_200m_Races['DOB'].dt.month\n",
+    "All_200m_Races['Day'] = All_200m_Races['DOB'].dt.day\n",
+    "All_200m_Races['YR'] = All_200m_Races['DOB'].dt.year # Labeling year as 'YR', so we don't get confused with the main year column 'Year'.\n",
+    "\n",
+    "All_200m_Races.head(3)"
    ]
   },
   {
@@ -2298,8 +2384,166 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    " = pd.DataFrame()\n",
-    ".head(3)"
+    "All_200m_Races = All_200m_Races.rename(columns={'Month': 'Month_Numeric'})\n",
+    "All_200m_Races.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Now let's make the column for the months based on it's name\n",
+    "\n",
+    "All_200m_Races['Month'] = pd.to_datetime(All_200m_Races['Month_Numeric'], format='%m').dt.month_name()\n",
+    "All_200m_Races.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "average_time_by_month_200m = All_200m_Races.groupby(['Athlete', 'Month'])['Time'].mean().reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "average_time_by_month_200m = pd.DataFrame(average_time_by_month_200m)\n",
+    "average_time_by_month_200m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's make quarters out of the year just incase we may want to analyze the data this way"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "All_200m_Races['Quarter'] = pd.cut(All_200m_Races['Month_Numeric'],\n",
+    "                       bins=[0, 3, 6, 9, 12],\n",
+    "                       labels=['Q1', 'Q2', 'Q3', 'Q4'])\n",
+    "\n",
+    "\n",
+    "All_200m_Races.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Let's make a column that categories the quarter of the year the race was ran\n",
+    "\n",
+    "# Assuming 'quarter' is a categorical column and 'year' is an integer\n",
+    "\n",
+    "All_200m_Races['Quarter_Year'] = All_200m_Races['Quarter'].astype(str) + ' ' + All_200m_Races['YR'].astype(str)\n",
+    "All_200m_Races.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Let's see how many races were ran each quarter**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Races_Run_200m_QR = All_200m_Races.groupby('Quarter_Year').size().reset_index(name='Races')\n",
+    "Races_Run_200m_QR.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Races_Run_200m_QR = pd.DataFrame(Races_Run_200m_QR)\n",
+    "Races_Run_200m_QR.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Let's get the total races for each month by year**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Total_Races_200m_Month = All_200m_Races.groupby(['YR', 'Month']).size().reset_index(name='Races')\n",
+    "Total_Races_200m_Month.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sort the grouped DataFrame by year and then by month in ascending order\n",
+    "Total_Races_200m_Month = Total_Races_200m_Month.sort_values(by=['year', 'month'])\n",
+    "Total_Races_200m_Month.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Total_Races_200m_Month = pd.DataFrame(Total_Races_200m_Month)\n",
+    "Total_Races_200m_Month.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Let's get the total races for each month by year**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Total_Races_200m_YR = All_200m_Races.groupby('YR').size().reset_index(name='Races')\n",
+    "Total_Races_200m_YR.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Total_Races_200m_YR = pd.DataFrame(Total_Races_200m_YR)\n",
+    "Total_Races_200m_YR.head(3)"
    ]
   },
   {
